--- a/web/product/index.xhtml
+++ b/web/product/index.xhtml
@@ -4,9 +4,30 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:body>
-         <ui:composition template="/WEB-INF/templates/maintemplate.xhtml" >
+        <ui:composition template="/WEB-INF/templates/maintemplate.xhtml" >
             <ui:define name="content">
                 <h1 class="page-header">List of Products</h1>
+                <h:form>
+                    <h:dataTable value="#{productController.productList}" var="product"
+                                 styleClass="table table-bordered table-hover"
+                                 headerClass="panel-heading"
+                                 rowClasses="resultTableOddRow,resultTableEvenRow">
+                        <h:column>
+                            #{product.name}
+                        </h:column>
+                        <h:column>
+                            #{product.price}
+                        </h:column>
+                        <h:column>
+                            #{product.description}
+                        </h:column>
+                        <h:column >
+                            <h:commandLink value="Add to cart" styleClass="btn btn-sm btn-primary"  />
+                            <h:commandLink value="Edit" styleClass="btn btn-sm btn-success"  />
+                            <h:commandLink value="Delete" styleClass="btn btn-sm btn-danger"  />
+                        </h:column>
+                    </h:dataTable>
+                </h:form>
             </ui:define>
         </ui:composition>
     </h:body>
