--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -2,31 +2,41 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-       xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
-        <title>#{msgs.logTit}</title>
+         <h:outputStylesheet library="css" name="bootstrap/bootstrap.min.css" />
+        <meta http-equiv="cache-control" content="no-cache" />
     </h:head>
     <h:body>
-        <h:form>
-            <h:panelGrid columns="2">
-                #{msgs.email}:
-                <h:panelGroup>
-                <h:inputText id="email" value="#{user.email}" required="true" 
-                             
-                             requiredMessage="#{msgs.emailErrMsg}" 
-                             validatorMessage="#msgs.emailValErr">
-                    <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@+[\w\.-]+[a-zA-Z0-9].+(com|net|org)" />
-                </h:inputText>
-                <h:message for="email" styleClass="errors"/>
-                </h:panelGroup>
-                #{msgs.password}:
-                <h:panelGroup>
-                <h:inputSecret id="pass" value="#{user.password}" required="true" requiredMessage="#{msgs.passErrMsg}"/>
-                 <h:message for="pass" styleClass="errors"/>
-                 </h:panelGroup>
-                <h:commandButton value="{msg.login}" action="#{control.doLogin}"/>
-            </h:panelGrid>
-        </h:form>
+        <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="login-panel panel panel-default" style="margin-top: 25%;">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Please Sign In</h3>
+                    </div>
+                    <div class="panel-body">
+                        <h:form >
+                            <fieldset>
+                                <div class="form-group">
+                                    <h:inputText  id="email" styleClass="form-control" />
+                                </div>
+                                <div class="form-group">
+                                    <h:inputSecret id="password" styleClass="form-control" />
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <h:selectBooleanCheckbox value="Remember Me" id="remember" />Remember Me
+                                    </label>
+                                </div>
+                                <!-- Change this to a button or input when using this as a form -->
+                                <h:commandButton value="Login" styleClass="btn btn-lg btn-success btn-block" />
+                            </fieldset>
+                        </h:form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </h:body>
 </html>
-
