End of day Monday 11
add, edit and list products

--- a/web/product/add.xhtml
+++ b/web/product/add.xhtml
@@ -10,8 +10,36 @@
                 <h:form styleClass="form-horizontal">
                     <div class="control-group">
                         <label class="control-label" for="name">Name :</label>
+                        <div class="controls has-error">
+                            <h:inputText value="#{productController.product.name}" id="name" required="true" />
+                             <h:message for="name" styleClass="help-block" />
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label" for="price">Price :</label>
+                        <div class="controls ">
+                            <h:inputText id="price" value="#{productController.product.price}" />
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label" for="quantity" >Quantity :</label>
+                        <div class="controls" for="quantity">
+                            <h:inputText id="quantity" value="#{productController.product.quantity}" />
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label" for="description">Description :</label>
+                        <div class="controls has-error">
+                            <h:inputTextarea  id="description" value="#{productController.product.description}" required="true" />
+                            <h:message for="description" styleClass="help-block" />
+                        </div>
+                    </div>
+                    <div class="control-group">
                         <div class="controls">
-                            <h:inputText value="" id="name" />
+                            <label class="control-label"></label>
+                            <h:commandButton class="btn btn-large btn-primary btn-margin-4" value="Save" action="#{productController.saveProduct()}"/>
+                            <h:commandButton class="btn btn-large btn-default btn-margin-4" value="Cancel" action="#{productController.cancel()}" immediate="true"/>
+                       
                         </div>
                     </div>
                 </h:form>
