--- a/web/product/index.xhtml
+++ b/web/product/index.xhtml
@@ -2,29 +2,50 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:body>
         <ui:composition template="/WEB-INF/templates/maintemplate.xhtml" >
             <ui:define name="content">
                 <h1 class="page-header">List of Products</h1>
                 <h:form>
                     <h:dataTable value="#{productController.productList}" var="product"
-                                 styleClass="table table-bordered table-hover"
+                                 styleClass="table table-hover"
                                  headerClass="panel-heading"
                                  rowClasses="resultTableOddRow,resultTableEvenRow">
+                       
                         <h:column>
-                            #{product.name}
+                            <f:facet name="header">
+                                Name
+                            </f:facet>
+                            <h:commandLink action="#{productController.viewProduct()}" >
+                                <h:outputText value="#{product.name}" />
+                                <f:param name="productId" value="#{product.id}" />
+                            </h:commandLink>
                         </h:column>
                         <h:column>
+                            <f:facet name="header">
+                                Price
+                            </f:facet>
                             #{product.price}
                         </h:column>
                         <h:column>
+                            <f:facet name="header">
+                                Description
+                            </f:facet>
                             #{product.description}
                         </h:column>
                         <h:column >
-                            <h:commandLink value="Add to cart" styleClass="btn btn-sm btn-primary"  />
-                            <h:commandLink value="Edit" styleClass="btn btn-sm btn-success"  />
-                            <h:commandLink value="Delete" styleClass="btn btn-sm btn-danger"  />
+                            <f:facet name="header" >
+                                Actions
+                            </f:facet>
+                            <h:commandLink value="Add to cart" styleClass="btn btn-sm btn-primary btn-margin-4"  />
+                            <h:commandLink value="Edit" action="#{productController.addProduct()}" styleClass="btn btn-sm btn-success btn-margin-4" >
+                                <f:param name="productId" value="#{product.id}"/>
+                            </h:commandLink>
+                            <h:commandLink value="Delete" styleClass="btn btn-sm btn-danger btn-margin-4" action="#{productController.deleteProduct()}" >
+                                <f:param name="productId" value="#{product.id}"/>
+                            </h:commandLink>
                         </h:column>
                     </h:dataTable>
                 </h:form>
