--- a/web/product/view.xhtml
+++ b/web/product/view.xhtml
@@ -2,11 +2,38 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:body>
          <ui:composition template="/WEB-INF/templates/maintemplate.xhtml" >
             <ui:define name="content">
-                <h1>Product Details</h1>
+                <h1>#{productController.product.name} Details</h1>
+                <div>
+                    <h:form>
+                        <h:commandLink value="Add to cart" styleClass="btn btn-sm btn-primary btn-margin-right"   />
+                        <h:commandLink value="Edit" action="#{productController.addProduct()}" styleClass="btn btn-sm btn-success" >
+                            <f:param name="productId" value="#{productController.product.id}"/>
+                        </h:commandLink>
+                        <h:commandLink value="Delete" action="#{productController.deleteProduct()}">
+                            <f:param name="productId" value="#{productController.product.id}" />
+                        </h:commandLink>
+                    </h:form>
+                </div>
+                <div>
+                    <div>
+                        Price :
+                        <h:outputText value="#{productController.product.price}" />
+                    </div>
+                    <div>
+                        Quantity available :
+                        <h:outputText value="#{productController.product.quantity}" />
+                    </div>
+                    <div>
+                        Description :
+                        <h:outputText value="#{productController.product.description}" />
+                    </div>
+                    
+                </div>
             </ui:define>
         </ui:composition>
     </h:body>
